Fixed offset alignment bug

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -107,6 +107,7 @@
     ul {
       @include vendor('display', 'flex');
       margin-bottom: 0;
+      margin-left: 3px;
       list-style: none;
       padding-left: 0;
       border: solid _size(border-width) _palette(border);
